Update audio files' extension from .m4a to .mp3 files

--- a/index.html
+++ b/index.html
@@ -502,35 +502,35 @@
         let hasUnsavedChanges = false;
         
         const arabicLetters = [
-            { arabic: 'ا', transliteration: 'Alif', audioFile: 'alif.m4a' },
-            { arabic: 'ب', transliteration: 'Baa', audioFile: 'baa.m4a' },
-            { arabic: 'ت', transliteration: 'Taa', audioFile: 'taa.m4a' },
-            { arabic: 'ث', transliteration: 'Thaa', audioFile: 'thaa.m4a' },
-            { arabic: 'ج', transliteration: 'Jeem', audioFile: 'jeem.m4a' },
-            { arabic: 'ح', transliteration: 'Haa', audioFile: 'haa.m4a' },
-            { arabic: 'خ', transliteration: 'Khaa', audioFile: 'khaa.m4a' },
-            { arabic: 'د', transliteration: 'Daal', audioFile: 'daal.m4a' },
-            { arabic: 'ذ', transliteration: 'Thaal', audioFile: 'thaal.m4a' },
-            { arabic: 'ر', transliteration: 'Raa', audioFile: 'raa.m4a' },
-            { arabic: 'ز', transliteration: 'Zaay', audioFile: 'zaay.m4a' },
-            { arabic: 'س', transliteration: 'Seen', audioFile: 'seen.m4a' },
-            { arabic: 'ش', transliteration: 'Sheen', audioFile: 'sheen.m4a' },
-            { arabic: 'ص', transliteration: 'Saad', audioFile: 'saad.m4a' },
-            { arabic: 'ض', transliteration: 'Daad', audioFile: 'daad.m4a' },
-            { arabic: 'ط', transliteration: 'Taa', audioFile: 'taa2.m4a' },
-            { arabic: 'ظ', transliteration: 'Dhaa', audioFile: 'dhaa.m4a' },
-            { arabic: 'ع', transliteration: 'Ayn', audioFile: 'ayn.m4a' },
-            { arabic: 'غ', transliteration: 'Ghayn', audioFile: 'ghayn.m4a' },
-            { arabic: 'ف', transliteration: 'Faa', audioFile: 'faa.m4a' },
-            { arabic: 'ق', transliteration: 'Qaaf', audioFile: 'qaaf.m4a' },
-            { arabic: 'ك', transliteration: 'Kaaf', audioFile: 'kaaf.m4a' },
-            { arabic: 'ل', transliteration: 'Laam', audioFile: 'laam.m4a' },
-            { arabic: 'م', transliteration: 'Meem', audioFile: 'meem.m4a' },
-            { arabic: 'ن', transliteration: 'Noon', audioFile: 'noon.m4a' },
-            { arabic: 'ه', transliteration: 'Haa', audioFile: 'haa2.m4a' },
-            { arabic: 'و', transliteration: 'Waaw', audioFile: 'waaw.m4a' },
-            { arabic: 'ء', transliteration: 'Hamza', audioFile: 'hamza.m4a' },
-            { arabic: 'ي', transliteration: 'Yaa', audioFile: 'yaa.m4a' }
+            { arabic: 'ا', transliteration: 'Alif', audioFile: 'alif.mp3' },
+            { arabic: 'ب', transliteration: 'Baa', audioFile: 'baa.mp3' },
+            { arabic: 'ت', transliteration: 'Taa', audioFile: 'taa.mp3' },
+            { arabic: 'ث', transliteration: 'Thaa', audioFile: 'thaa.mp3' },
+            { arabic: 'ج', transliteration: 'Jeem', audioFile: 'jeem.mp3' },
+            { arabic: 'ح', transliteration: 'Haa', audioFile: 'haa.mp3' },
+            { arabic: 'خ', transliteration: 'Khaa', audioFile: 'khaa.mp3' },
+            { arabic: 'د', transliteration: 'Daal', audioFile: 'daal.mp3' },
+            { arabic: 'ذ', transliteration: 'Thaal', audioFile: 'thaal.mp3' },
+            { arabic: 'ر', transliteration: 'Raa', audioFile: 'raa.mp3' },
+            { arabic: 'ز', transliteration: 'Zaay', audioFile: 'zaay.mp3' },
+            { arabic: 'س', transliteration: 'Seen', audioFile: 'seen.mp3' },
+            { arabic: 'ش', transliteration: 'Sheen', audioFile: 'sheen.mp3' },
+            { arabic: 'ص', transliteration: 'Saad', audioFile: 'saad.mp3' },
+            { arabic: 'ض', transliteration: 'Daad', audioFile: 'daad.mp3' },
+            { arabic: 'ط', transliteration: 'Taa', audioFile: 'taa2.mp3' },
+            { arabic: 'ظ', transliteration: 'Dhaa', audioFile: 'dhaa.mp3' },
+            { arabic: 'ع', transliteration: 'Ayn', audioFile: 'ayn.mp3' },
+            { arabic: 'غ', transliteration: 'Ghayn', audioFile: 'ghayn.mp3' },
+            { arabic: 'ف', transliteration: 'Faa', audioFile: 'faa.mp3' },
+            { arabic: 'ق', transliteration: 'Qaaf', audioFile: 'qaaf.mp3' },
+            { arabic: 'ك', transliteration: 'Kaaf', audioFile: 'kaaf.mp3' },
+            { arabic: 'ل', transliteration: 'Laam', audioFile: 'laam.mp3' },
+            { arabic: 'م', transliteration: 'Meem', audioFile: 'meem.mp3' },
+            { arabic: 'ن', transliteration: 'Noon', audioFile: 'noon.mp3' },
+            { arabic: 'ه', transliteration: 'Haa', audioFile: 'haa2.mp3' },
+            { arabic: 'و', transliteration: 'Waaw', audioFile: 'waaw.mp3' },
+            { arabic: 'ء', transliteration: 'Hamza', audioFile: 'hamza.mp3' },
+            { arabic: 'ي', transliteration: 'Yaa', audioFile: 'yaa.mp3' }
         ];
 
         function createFlashcard(letter, index) {
