--- a/alphabet_with_vowels.html
+++ b/alphabet_with_vowels.html
@@ -355,7 +355,7 @@
   <div class="container">
     <div class="header">
       <h1>Arabic Alphabet with Vowels</h1>
-      <p>Click to flip and learn. Select specific letters and/or vowels for more focused practice.</p>
+      <p>Click to flip and learn. Select specific letters/vowels for more focused practice.</p>
       <div style="margin-top: 1rem; display: inline-block;">
                 <button onclick="toggleSelector()" style="padding: 0.5rem 1rem; margin-bottom: 10px; font-weight: 600; border-radius: 8px; background: #81c784; background: linear-gradient(180deg, #93d696 0%, #77c27b 100%); text-shadow: 1px 1px 2px #487a4a; color: white; border-color:rgba(255, 255, 255, 0.2); cursor: pointer;">Select Specific Letters/Vowels</button>
             </div>
