Added link to "under development" pages

--- a/alphabet_with_vowels.html
+++ b/alphabet_with_vowels.html
@@ -347,9 +347,9 @@
     <ul>
       <li><a href="index.html">Arabic Alphabet Flashcards</a></li>
       <li><a href="alphabet_with_vowels.html" class="active">Arabic Alphabet with Vowels Flashcards</a></li>
-      <li><a href="#">Letter Forms</a></li>
-      <li><a href="#">3-Letter Root Words</a></li>
-      <li><a href="#">ETC</a></li>
+      <li><a href="working_on_it.html">Letter Forms</a></li>
+      <li><a href="working_on_it.html">3-Letter Root Words</a></li>
+      <li><a href="working_on_it.html">ETC</a></li>
     </ul>
   </nav>
 
