--- a/index.html
+++ b/index.html
@@ -438,9 +438,9 @@
         <ul>
             <li><a href="#" class="active">Arabic Alphabet Flashcards</a></li>
             <li><a href="alphabet_with_vowels.html">Arabic Alphabet with Vowels Flashcards</a></li>
-            <li><a href="#">Letter Forms</a></li>
-            <li><a href="#">3-Letter Root Words</a></li>
-            <li><a href="#">ETC</a></li>
+            <li><a href="working_on_it.html">Letter Forms</a></li>
+            <li><a href="working_on_it.html">3-Letter Root Words</a></li>
+            <li><a href="working_on_it.html">ETC</a></li>
         </ul>
     </nav>
     <div class="container">
