--- a/alphabet_with_vowels.html
+++ b/alphabet_with_vowels.html
@@ -6,8 +6,6 @@
   <title>Arabic Alphabet with Vowels</title>
   <link rel="stylesheet" href="styles.css" />
   <style>
-    @import url('https://fonts.googleapis.com/css2?family=Amiri:wght@400;700&family=Inter:wght@300;400;500;600&display=swap');
-
     * {
       margin: 0;
       padding: 0;
@@ -101,7 +99,6 @@
       height: 240px;
       perspective: 1000px;
       cursor: pointer;
-      font-family: 'Amiri', serif;
     }
 
     .card-inner {
@@ -125,8 +122,7 @@
       display: flex;
       align-items: center;
       justify-content: center;
-      font-size: 3rem;
-      font-weight: bold;
+      font-size: 5rem;
       background: linear-gradient(135deg, #acffa9 0%, #2d6526 100%);
       color: white;
       box-shadow: 0 10px 30px rgba(0, 0, 0, 0.3);
@@ -600,9 +596,8 @@
       const front = document.createElement('div');
       front.className = 'card-front';
       const span = document.createElement('span');
-      span.textContent = (vowel.symbol === '\u0650' && ['ج','ح','خ','ع','غ'].includes(letter))
-        ? (span.className = 'kasra-under', letter)
-        : letter + vowel.symbol;
+      span.textContent = letter + vowel.symbol;
+      span.style.textShadow = '0 2px 4px rgba(0, 0, 0, 0.3)';
       front.appendChild(span);
 
       const back = document.createElement('div');
