Fixed font discrepancy for sidebar

--- a/alphabet_with_vowels.html
+++ b/alphabet_with_vowels.html
@@ -6,6 +6,8 @@
     <title>Arabic Alphabet with Vowels</title>
     <link rel="stylesheet" href="styles.css" />
     <style>
+      @import url('https://fonts.googleapis.com/css2?family=Amiri:wght@400;700&family=Inter:wght@300;400;500;600&display=swap');
+
       * {
         margin: 0;
         padding: 0;
