Added "Letter Forms with Fatha" page. Updated side menu.

--- a/alphabet_with_vowels.html
+++ b/alphabet_with_vowels.html
@@ -382,17 +382,13 @@
   </head>
   <body>
     <nav class="sidebar">
-      <ul>
-        <li><a href="index.html">Arabic Alphabet Flashcards</a></li>
-        <li>
-          <a href="alphabet_with_vowels.html" class="active"
-            >Arabic Alphabet with Vowels Flashcards</a
-          >
-        </li>
-        <li><a href="working_on_it.html">Letter Forms</a></li>
-        <li><a href="working_on_it.html">3-Letter Root Words</a></li>
-        <li><a href="working_on_it.html">ETC</a></li>
-      </ul>
+        <ul>
+            <li><a href="index.html">Arabic Alphabet Flashcards</a></li>
+            <li><a href="alphabet_with_vowels.html" class="active">Arabic Alphabet with Vowels Flashcards</a></li>
+            <li><a href="letter_forms_w_fatha.html">Letter Forms with Fatha</a></li>
+            <li><a href="working_on_it.html">3-Letter Root Words</a></li>
+            <li><a href="working_on_it.html">ETC</a></li>
+        </ul>
     </nav>
 
     <div class="container">
