--- a/index.html
+++ b/index.html
@@ -473,9 +473,9 @@
 <body>
     <nav class="sidebar">
         <ul>
-            <li><a href="#" class="active">Arabic Alphabet Flashcards</a></li>
+            <li><a href="index.html" class="active">Arabic Alphabet Flashcards</a></li>
             <li><a href="alphabet_with_vowels.html">Arabic Alphabet with Vowels Flashcards</a></li>
-            <li><a href="working_on_it.html">Letter Forms</a></li>
+            <li><a href="letter_forms_w_fatha.html">Letter Forms with Fatha</a></li>
             <li><a href="working_on_it.html">3-Letter Root Words</a></li>
             <li><a href="working_on_it.html">ETC</a></li>
         </ul>
