--- a/letter_forms_w_fatha.html
+++ b/letter_forms_w_fatha.html
@@ -186,7 +186,7 @@
         }
 
         td:hover {
-            background: linear-gradient(135deg, #ffffff 0%, #e3c1ff 100%);
+            background: #efdbff
         }
 
         tr:hover{
